[gd_scene load_steps=45 format=3 uid="uid://cadhc63l4phn7"]

[ext_resource type="Script" path="res://input.gd" id="1_cdgn3"]
[ext_resource type="Script" path="res://button_scripts/button_0.gd" id="1_totml"]
[ext_resource type="Theme" uid="uid://dijyvgyshdkqj" path="res://fontsize40.tres" id="1_xbuye"]
[ext_resource type="Script" path="res://button_scripts/result_label.gd" id="2_5bv7m"]
[ext_resource type="Script" path="res://addons/BetterTabContainer/BetterTabContainer.gd" id="2_iopcd"]
[ext_resource type="Script" path="res://button_scripts/clear.gd" id="2_ltflc"]
[ext_resource type="Script" path="res://button_scripts/delete.gd" id="3_1veor"]
[ext_resource type="Script" path="res://button_scripts/move_left.gd" id="3_1343i"]
[ext_resource type="Texture2D" uid="uid://bgk42bvlenvkf" path="res://assets/pan-start-symbolic.svg" id="3_rf4oa"]
[ext_resource type="Script" path="res://button_scripts/move_right.gd" id="4_mgs5p"]
[ext_resource type="Script" path="res://button_scripts/enter.gd" id="4_qdnla"]
[ext_resource type="Script" path="res://button_scripts/answer.gd" id="4_t5poh"]
[ext_resource type="Texture2D" uid="uid://b2tynr2ibjxde" path="res://assets/pan-end-symbolic.svg" id="5_45h5p"]
[ext_resource type="Texture2D" uid="uid://ct7g6vdmpw42t" path="res://assets/up.svg" id="5_fxyrf"]
[ext_resource type="PackedScene" uid="uid://dhq1ipjojc65i" path="res://tab_scenes/numbers_2.tscn" id="5_xt0je"]
[ext_resource type="Script" path="res://button_scripts/move_up.gd" id="6_f7fx4"]
[ext_resource type="Texture2D" uid="uid://dmdn4sjftsqal" path="res://assets/down.svg" id="6_vs4rt"]
[ext_resource type="Script" path="res://button_scripts/absolute_value.gd" id="7_ivjdx"]
[ext_resource type="Script" path="res://button_scripts/history.gd" id="7_s1wyn"]
[ext_resource type="Texture2D" uid="uid://v7o6h3f5uawn" path="res://assets/edit-clear-symbolic.svg" id="7_t6dja"]
[ext_resource type="Script" path="res://button_scripts/move_down.gd" id="8_nitcu"]
[ext_resource type="Script" path="res://button_scripts/exponent.gd" id="10_855gx"]
[ext_resource type="PackedScene" uid="uid://c0wtqeutvitaw" path="res://tab_scenes/settings.tscn" id="11_fv7st"]
[ext_resource type="Texture2D" uid="uid://bvjlxishyorn" path="res://assets/system-search-symbolic.svg" id="19_8hrvw"]
[ext_resource type="Script" path="res://button_scripts/tree_scripts/functions_vbox.gd" id="21_i2l4e"]
[ext_resource type="Script" path="res://button_scripts/tree_scripts/units_vbox.gd" id="23_5dpns"]
[ext_resource type="Script" path="res://button_scripts/tree_scripts/variables_vbox.gd" id="24_bsoas"]
[ext_resource type="Texture2D" uid="uid://besjaaqhm22j8" path="res://assets/history.svg" id="29_gjnpd"]
[ext_resource type="Texture2D" uid="uid://bnihwboli7y8m" path="res://assets/numbers.svg" id="30_84j1t"]
[ext_resource type="Texture2D" uid="uid://ko16gghkmr44" path="res://assets/numbers2.svg" id="31_oo1l3"]
[ext_resource type="Texture2D" uid="uid://iq7yq1n6m3ih" path="res://assets/functions.svg" id="32_vmmvh"]
[ext_resource type="Texture2D" uid="uid://cgmruef6w7mtu" path="res://assets/units.svg" id="33_ausu2"]
[ext_resource type="Texture2D" uid="uid://c3klormftndvu" path="res://assets/variable.svg" id="34_x6s3r"]
[ext_resource type="Texture2D" uid="uid://brvlxj72euhfj" path="res://assets/settings.svg" id="35_j76cm"]
[ext_resource type="PackedScene" uid="uid://c71i4jnxbut05" path="res://popup_scenes/history.tscn" id="35_ky60x"]
[ext_resource type="Script" path="res://button_scripts/tab_bar.gd" id="36_ae7b7"]
[ext_resource type="PackedScene" uid="uid://c1dgkfgmc53l4" path="res://popup_scenes/fn_popup.tscn" id="39_qukme"]
[ext_resource type="PackedScene" uid="uid://nh8crhstsjw1" path="res://popup_scenes/exchange_rate_fetch_popup.tscn" id="41_5ki2o"]
[ext_resource type="PackedScene" uid="uid://bbfqxffrcipan" path="res://popup_scenes/successful_exchange_rate_fetch.tscn" id="42_k1rp2"]
[ext_resource type="PackedScene" uid="uid://ci2hd3djpmtc4" path="res://popup_scenes/error_exchange_rate_fetch.tscn" id="43_1u2on"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_on5hf"]
number_color = Color(1, 1, 1, 1)
symbol_color = Color(0.823529, 0.0588235, 0.223529, 1)
function_color = Color(0.117647, 0.4, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3js0"]
bg_color = Color(0.117647, 0.4, 0.960784, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.117647, 0.4, 0.960784, 0)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afa52"]
bg_color = Color(0.0431373, 0.333333, 0.917647, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.117647, 0.4, 0.960784, 0)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qtkx"]
bg_color = Color(1, 1, 1, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="input" type="CodeEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
focus_mode = 1
theme_override_font_sizes/font_size = 100
virtual_keyboard_enabled = false
wrap_mode = 1
caret_blink = true
caret_blink_interval = 0.5
caret_mid_grapheme = true
caret_multiple = false
syntax_highlighter = SubResource("CodeHighlighter_on5hf")
highlight_all_occurrences = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_cdgn3")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="Label" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0
meta_underlined = false
hint_underlined = false
script = ExtResource("2_5bv7m")

[node name="TabContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
scroll_deadzone = 10
script = ExtResource("2_iopcd")

[node name="numbers" type="GridContainer" parent="VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="up" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
icon = ExtResource("5_fxyrf")
icon_alignment = 1
script = ExtResource("6_f7fx4")

[node name="down" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
icon = ExtResource("6_vs4rt")
icon_alignment = 1
script = ExtResource("8_nitcu")

[node name="left_par" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "("
script = ExtResource("1_totml")

[node name="right_par" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = ")"
script = ExtResource("1_totml")

[node name="history" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
icon = ExtResource("29_gjnpd")
icon_alignment = 1
script = ExtResource("7_s1wyn")

[node name="move_left" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
icon = ExtResource("3_rf4oa")
icon_alignment = 1
script = ExtResource("3_1343i")

[node name="move_right" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
icon = ExtResource("5_45h5p")
icon_alignment = 1
script = ExtResource("4_mgs5p")

[node name="abs_val" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "|x|"
script = ExtResource("7_ivjdx")

[node name="exponent" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "x ∏"
script = ExtResource("10_855gx")

[node name="clear" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.823529, 0.0588235, 0.223529, 1)
theme_override_colors/font_pressed_color = Color(0.823529, 0.0588235, 0.223529, 1)
theme_override_colors/font_color = Color(0.823529, 0.0588235, 0.223529, 1)
text = "C"
script = ExtResource("2_ltflc")

[node name="Button7" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_font_sizes/font_size = 0
text = "7"
script = ExtResource("1_totml")

[node name="Button8" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "8"
script = ExtResource("1_totml")

[node name="Button9" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "9"
script = ExtResource("1_totml")

[node name="Divide" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "/"
script = ExtResource("1_totml")

[node name="delete" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/icon_normal_color = Color(0.823529, 0.0588235, 0.223529, 1)
theme_override_colors/icon_pressed_color = Color(0.823529, 0.0588235, 0.223529, 1)
theme_override_colors/icon_hover_color = Color(0.823529, 0.0588235, 0.223529, 1)
theme_override_font_sizes/font_size = 0
icon = ExtResource("7_t6dja")
icon_alignment = 1
script = ExtResource("3_1veor")

[node name="Button4" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "4"
script = ExtResource("1_totml")

[node name="Button5" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "5"
script = ExtResource("1_totml")

[node name="Button6" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "6"
script = ExtResource("1_totml")

[node name="Multiply" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "*"
script = ExtResource("1_totml")

[node name="answer" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "ans"
script = ExtResource("4_t5poh")

[node name="Button1" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "1"
script = ExtResource("1_totml")

[node name="Button2" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "2"
script = ExtResource("1_totml")

[node name="Button3" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "3"
script = ExtResource("1_totml")

[node name="Minus" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "-"
script = ExtResource("1_totml")

[node name="percent" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "%"
script = ExtResource("1_totml")

[node name="comma" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = ","
script = ExtResource("1_totml")

[node name="Button0" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "0"
script = ExtResource("1_totml")

[node name="Dot" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
text = "."
script = ExtResource("1_totml")

[node name="sum" type="Button" parent="VBoxContainer/TabContainer/numbers"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_colors/font_hover_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.4, 0.960784, 1)
theme_override_colors/font_color = Color(0.117647, 0.4, 0.960784, 1)
text = "+"
script = ExtResource("1_totml")

[node name="GDExample" type="GDExample" parent="VBoxContainer/TabContainer/numbers"]
unique_name_in_owner = true
physics_interpolation_mode = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("1_xbuye")
theme_override_styles/hover = SubResource("StyleBoxFlat_m3js0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_afa52")
theme_override_styles/normal = SubResource("StyleBoxFlat_m3js0")
text = "="
script = ExtResource("4_qdnla")

[node name="numbers2" parent="VBoxContainer/TabContainer" instance=ExtResource("5_xt0je")]
unique_name_in_owner = true
layout_mode = 2

[node name="Functions" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
script = ExtResource("21_i2l4e")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Functions"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_icons/clear = ExtResource("7_t6dja")
placeholder_text = "Search:"
clear_button_enabled = true
right_icon = ExtResource("19_8hrvw")

[node name="Units" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
script = ExtResource("23_5dpns")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Units"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_icons/clear = ExtResource("7_t6dja")
placeholder_text = "Search:"
clear_button_enabled = true
right_icon = ExtResource("19_8hrvw")

[node name="Variables" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
script = ExtResource("24_bsoas")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Variables"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_icons/clear = ExtResource("7_t6dja")
placeholder_text = "Search:"
clear_button_enabled = true
right_icon = ExtResource("19_8hrvw")

[node name="Settings" parent="VBoxContainer/TabContainer" instance=ExtResource("11_fv7st")]
unique_name_in_owner = true
layout_mode = 2

[node name="TabBar" type="TabBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_5qtkx")
current_tab = 0
tab_alignment = 1
clip_tabs = false
tab_count = 6
tab_0/icon = ExtResource("30_84j1t")
tab_1/icon = ExtResource("31_oo1l3")
tab_2/icon = ExtResource("32_vmmvh")
tab_3/icon = ExtResource("33_ausu2")
tab_4/icon = ExtResource("34_x6s3r")
tab_5/icon = ExtResource("35_j76cm")
script = ExtResource("36_ae7b7")

[node name="fn_popup" parent="." instance=ExtResource("39_qukme")]
visible = false

[node name="rates_popup" parent="." instance=ExtResource("41_5ki2o")]
unique_name_in_owner = true
visible = false

[node name="success_exchange_rate" parent="." instance=ExtResource("42_k1rp2")]
visible = false

[node name="error_exchange_rate" parent="." instance=ExtResource("43_1u2on")]
visible = false

[node name="history_popup" parent="." instance=ExtResource("35_ky60x")]
visible = false

[connection signal="focus_exited" from="VBoxContainer/input" to="VBoxContainer/input" method="_on_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/input" to="VBoxContainer/input" method="_on_gui_input"]
[connection signal="meta_clicked" from="VBoxContainer/ScrollContainer/Label" to="VBoxContainer/ScrollContainer/Label" method="_on_meta_clicked"]
[connection signal="tab_clicked" from="VBoxContainer/TabBar" to="VBoxContainer/TabBar" method="_on_tab_clicked"]
